<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">577592772314235</string>
    <string name="app_name">DRIVERS.GE</string>
    <string name="fb_login_title">DRIVERS.GE Facebook Login</string>
    <string name="app_slogan">გზების გმირები</string>
    <string name="post_author">ავტორი</string>
    <string name="post_date">თარიღი</string>
    <string name="post_unlike">ვერჩი</string>
    <string name="post_like">რას ვერჩი</string>
    <string name="menu_videos">ვიდეო მასალა</string>
    <string name="menu_photos">ფოტო მასალა</string>
    <string name="menu_facebook">Facebook მომხმარებლით შესვლა</string>
    <string name="menu_google">Google+ მომხმარებლით შესვლა</string>
    <string name="menu_upload">მასალის ატვირთვა</string>
    <string name="menu_uploaded">ატვირთული მასალა</string>
    <string name="menu_rated">შეფასებული მასალა</string>
    <string name="menu_logout">გასვლა</string>
    <string name="post_plate">მანქანის ნომერი</string>
    <string name="upload_anonymous">ანონიმური ატვირთვა</string>
    <string name="post_description">აღწერა</string>
    <string name="post_make">მარკა</string>
    <string name="post_model">მოდელი</string>
    <string name="post_city">ქალაქი</string>
    <string name="search_keyword">საძიებო ტექსტი</string>
    <string name="search_submit">ძიება</string>
    <string name="upload_add_item">მასალის დამატება</string>
    <string name="uploading_message">მიმდინარეობს ფაილის ატვირთვა...</string>
    <string name="dialog_yes">დიახ</string>
    <string name="dialog_no">არა</string>
    <string name="delete_uploaded_title">წაშლა</string>
    <string name="delete_uploaded_question">დარწმუნებული ხართ რომ გსურთ ატვირთული ფაილის წაშლა?</string>
    <string name="delete_uploaded_answer">ფაილი წაშლილია</string>
    <string name="upload_file_error">შეცდომა</string>
    <string name="upload_file_error_desc">მოცემული საქაღალდედან ფაილის ატვირთვა შეუძლებელია</string>
    <string name="upload_post_title">მასალის განთავსება</string>
    <string name="upload_completed">თქვენი პოსტი განთავსებულია</string>
    <string name="upload_incomplete">თქვენი პოსტი განთავსებულია</string>
    <string name="upload_submit">მასალის გამოქვეყნება</string>
    <string name="report_title">შეატყობინე ადმინისტრატორს</string>
    <string name="report_hint">რატომ არეპორტებთ მოცემულ მასალას?</string>
    <string name="report_result">თქვენი შეტყობინება გაიგზავნა საიტის ადმინისტრატორთან</string>
    <string name="report_send">გაგზავნა</string>
    <string name="loading_mess">გთხოვთ დაელოდოთ...</string>
    <string name="delete_post_title">წაშლა</string>
    <string name="delete_post_question">დარწმუნებული ხართ რომ გსურთ ატვირთული მასალის წაშლა?</string>    
    <string name="delete_result">მასალა წაშლილია</string>
    <string name="rate_post_error">შეცდომა</string>
    <string name="video_title_bar">ვიდეო</string>
    <string name="inner_post_title">პოსტი ვრცლად</string>
    <string name="action_user_posts">-ს განთავსებული პოსტები</string>
    <string name="action_plate_posts">ნომერზე განთავსებული პოსტები</string>
    <string name="action_car_posts">-ზე განთავსებული პოსტები</string>
    <string name="action_city_posts">ყველა პოსტი ქალაქში</string>
    <string name="share_title">გაზიარება</string>
</resources>
