<?xml version="1.0" encoding="UTF-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="#777777"
                  android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4px"
            android:layout_marginTop="8px"
            android:gravity="center">
            <EditText
                android:id="@+id/plate_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/post_plate"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Spinner android:id="@+id/make_id" 
                     android:layout_margin="4px" 
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
            <Spinner android:id="@+id/model_id" 
                     android:layout_margin="4px" 
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Spinner android:id="@+id/city_id" 
                     android:layout_margin="4px"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/is_anonymous"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_anonymous"
                android:checked="false" />
        </LinearLayout>
        <EditText
            android:id="@+id/open_comment" 
            android:layout_margin="4px"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:hint="@string/post_description"
            android:gravity="top"
            android:inputType="text" />
        <ListView
            android:id="@+id/upload_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#434343"
            android:fastScrollEnabled="true" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12px"
            android:layout_marginBottom="10px"
            android:text="@string/upload_submit"
            android:onClick="createNewPost" />
    </LinearLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
              android:layout_width="265dp"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:choiceMode="singleChoice"
              android:divider="@drawable/divider"
              android:dividerHeight="1dp"
              android:background="#111" />
</android.support.v4.widget.DrawerLayout>